prepare nano-local version of nanoticker

--- a/netdata/repstats_v21.conf
+++ b/netdata/repstats_v21.conf
@@ -79,12 +79,26 @@
 # AUTO-DETECTION JOBS
 # only one of them will run (they have the same name)
 
-localhost:
+repstats1:  
   name : 'local'
-  url  : 'https://nanoticker.info/json/stats.json'
-  redirect: yes
+  url  : 'http://localhost:80/json/stats.json'
+  update_every: 2
   timeout: 5
-  retries: 100000
+  retries: 3
+
+repstats2:  
+  name : 'local'
+  url  : 'http://127.0.0.1:80/json/stats.json'
+  update_every: 2
+  timeout: 5
+  retries: 3
+
+repstats3:  
+  name : 'local'
+  url  : 'http://0.0.0.0:80/json/stats.json'
+  update_every: 2
+  timeout: 5
+  retries: 3
 
 #Example of remote job
 #Ninja:
