prepare beta clone

--- a/netdata/repstats-b.conf
+++ b/netdata/repstats-b.conf
@@ -82,7 +82,7 @@
 localhost:
   name : 'local'
   #url  : 'https://b-monitor.repnode.org/stats-beta.json'
-  url: 'https://betastats.nanoticker.info/stats-beta.json'
+  url: 'http://localhost:80/json/stats.json'
   redirect: yes
   timeout: 5
   retries: 1000000
