--- a/netdata/repstats_v21.conf
+++ b/netdata/repstats_v21.conf
@@ -79,28 +79,10 @@
 # AUTO-DETECTION JOBS
 # only one of them will run (they have the same name)
 
-repstats1:  
+localhost:
   name : 'local'
-  url  : 'http://localhost:80/json/stats.json'
-  update_every: 20
+  url: 'http://localhost:80/json/stats.json'
+  redirect: yes
   timeout: 5
-  retries: 3
+  retries: 1000000
 
-repstats2:  
-  name : 'local'
-  url  : 'http://127.0.0.1:80/json/stats.json'
-  update_every: 20
-  timeout: 5
-  retries: 3
-
-repstats3:  
-  name : 'local'
-  url  : 'http://0.0.0.0:80/json/stats.json'
-  update_every: 20
-  timeout: 5
-  retries: 3
-
-#Example of remote job
-#Ninja:
-  #name: 'Ninja'
-  #url: 'http://monitor.mynano.ninja/api.php'
